policies/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Audit

  background: true

  rules:
    - name: validate-image-tag

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Using latest image tags is not allowed."

        pattern:
          spec:
            containers:
              - image: "!*:latest"
