policies/kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-requests-limits

spec:
  validationFailureAction: Audit
  background: true

  rules:
    - name: check-resources

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "CPU and memory requests/limits are required."

        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
